--- a/EasyBookShop/Properties/Resources.resx
+++ b/EasyBookShop/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="appbar.eye" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\appbar.eye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rsz_become-customer-icon-blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rsz_become-customer-icon-blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
